generator client {
  provider = "prisma-client-js"
}

generator custom_generator {
  provider = "prisma-generator-fake-data"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

model User {
  id            String    @id @default(cuid())
  name          String
  username      String    @unique
  email         String?   @unique
  emailVerified DateTime?
  image         String?
  password      String?
  role          UserRole  @default(UNKNOW)
}

model ProductStock {
  id             String    @id @default(cuid())
  name           String
  imageProduct   String?
  stock          Int       @default(0)
  brand          Brand
  buyPrice       Decimal   @default(0) @db.Decimal(15, 2)
  category       String
  createdAt      DateTime  @default(now())
  masterCategory String
  sellPrice      Decimal   @default(0) @db.Decimal(15, 2)
  skuManual      String    @unique
  barcode        String?
  updatedAt      DateTime  @updatedAt
  Product        Product?

  @@index([brand])
  @@index([brand, category])
  @@index([brand, masterCategory])
  @@index([name])
}

model Product {
  id            String          @id @default(cuid())
  productId     String          @unique
  sellprice     Decimal         @db.Decimal(15, 2)
  OnSaleProduct OnSaleProduct[]
  productstock  ProductStock    @relation(fields: [productId], references: [id], onDelete: Cascade)
}

model OnSaleProduct {
  id            String      @id @default(cuid())
  productId     String
  quantity      Int
  saledate      DateTime    @default(now())
  transactionId String
  product       Product     @relation(fields: [productId], references: [productId], onDelete: Cascade)
  transaction   Transaction @relation(fields: [transactionId], references: [id], onDelete: Cascade)

  @@unique([productId, transactionId])
  @@index([transactionId])
}

model Transaction {
  totalAmount    Decimal?          @db.Decimal(15, 2)
  createdAt      DateTime          @default(now())
  id             String            @id @default(cuid())
  isComplete     Boolean           @default(false)
  changeAmount   Decimal?          @default(0) @db.Decimal(15, 2)
  paymentAmount  Decimal?          @default(0) @db.Decimal(15, 2)
  discountAmount Decimal?          @default(0) @db.Decimal(15, 2)
  status         TransactionStatus @default(SUKSES)
  deletedAt      DateTime?
  products       OnSaleProduct[]
  debt           Debt?

  @@index([createdAt])
  @@index([status])
}

model ShopData {
  id   String  @id @default(cuid())
  name String?
}

enum TransactionStatus {
  SUKSES
  RETUR
  HUTANG
}

enum UserRole {
  OWNER
  WORKER
  UNKNOW
}

enum Brand {
  HONDA
  YAMAHA
  KAWASAKI
  SUZUKI
}

// Entitas bengkel tetap yang punya piutang
model Bengkel {
  id            String        @id @default(cuid())
  name          String        @unique
  phone         String?
  address       String?
  notes         String?
  paymentCycle  Int           @default(7)
  nextPaymentAt DateTime?
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt
  debts         Debt[]
  payments      DebtPayment[]

  @@index([name])
}

model Debt {
  id             String            @id @default(cuid())
  bengkelId      String?
  bengkel        Bengkel?          @relation(fields: [bengkelId], references: [id], onDelete: Cascade)
  amount         Decimal           @db.Decimal(15, 2)
  transactionId  String            @unique
  transaction    Transaction       @relation(fields: [transactionId], references: [id], onDelete: Cascade)
  notes          String?
  isPaid         Boolean           @default(false)
  paidAt         DateTime?
  createdAt      DateTime          @default(now())
  updatedAt      DateTime          @updatedAt
  paymentItems   DebtPaymentItem[]

  @@index([bengkelId])
  @@index([isPaid])
  @@index([createdAt])
}

// Rekaman setiap kali bengkel melakukan pembayaran hutang
model DebtPayment {
  id          String            @id @default(cuid())
  bengkelId   String
  bengkel     Bengkel           @relation(fields: [bengkelId], references: [id], onDelete: Cascade)
  totalPaid   Decimal           @db.Decimal(15, 2)
  discount    Decimal           @default(0) @db.Decimal(15, 2)
  notes       String?
  createdAt   DateTime          @default(now())
  debtItems   DebtPaymentItem[]

  @@index([bengkelId])
  @@index([createdAt])
}

// Detail hutang yang dilunasi dalam satu sesi pembayaran
model DebtPaymentItem {
  id        String      @id @default(cuid())
  paymentId String
  payment   DebtPayment @relation(fields: [paymentId], references: [id], onDelete: Cascade)
  debtId    String
  debt      Debt        @relation(fields: [debtId], references: [id], onDelete: Cascade)

  @@unique([paymentId, debtId])
}

model Category {
  id        String   @id @default(cuid())
  name      String   @unique
  createdAt DateTime @default(now())
}

model Expense {
  id          String          @id @default(cuid())
  description String
  amount      Decimal         @db.Decimal(15, 2)
  category    ExpenseCategory @default(LAINNYA)
  notes       String?
  createdAt   DateTime        @default(now())
  updatedAt   DateTime        @updatedAt

  @@index([category])
  @@index([createdAt])
}

enum ExpenseCategory {
  RESTOK
  OPERASIONAL
  GAJI
  PIUTANG_MASUK
  LAINNYA
}
