//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  username String [unique, not null]
  email String [unique]
  emailVerified DateTime
  image String
  password String
  role UserRole [not null, default: 'UNKNOW']
}

Table ProductStock {
  id String [pk]
  name String [not null]
  imageProduct String
  stock Int [not null, default: 0]
  brand Brand [not null]
  buyPrice Decimal [not null, default: 0]
  category String [not null]
  createdAt DateTime [default: `now()`, not null]
  masterCategory String [not null]
  sellPrice Decimal [not null, default: 0]
  skuManual String [unique, not null]
  barcode String
  updatedAt DateTime [not null]
  Product Product
}

Table Product {
  id String [pk]
  productId String [unique, not null]
  sellprice Decimal [not null]
  OnSaleProduct OnSaleProduct [not null]
  productstock ProductStock [not null]
}

Table OnSaleProduct {
  id String [pk]
  productId String [not null]
  quantity Int [not null]
  saledate DateTime [default: `now()`, not null]
  transactionId String [not null]
  product Product [not null]
  transaction Transaction [not null]

  indexes {
    (productId, transactionId) [unique]
  }
}

Table Transaction {
  totalAmount Decimal
  createdAt DateTime [default: `now()`, not null]
  id String [pk]
  isComplete Boolean [not null, default: false]
  changeAmount Decimal [default: 0]
  paymentAmount Decimal [default: 0]
  discountAmount Decimal [default: 0]
  status TransactionStatus [not null, default: 'SUKSES']
  deletedAt DateTime
  products OnSaleProduct [not null]
  debt Debt
}

Table ShopData {
  id String [pk]
  name String
}

Table Bengkel {
  id String [pk]
  name String [unique, not null]
  phone String
  address String
  notes String
  paymentCycle Int [not null, default: 7]
  nextPaymentAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  debts Debt [not null]
  payments DebtPayment [not null]
}

Table Debt {
  id String [pk]
  bengkelId String
  bengkel Bengkel
  amount Decimal [not null]
  transactionId String [unique, not null]
  transaction Transaction [not null]
  notes String
  isPaid Boolean [not null, default: false]
  paidAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  paymentItems DebtPaymentItem [not null]
}

Table DebtPayment {
  id String [pk]
  bengkelId String [not null]
  bengkel Bengkel [not null]
  totalPaid Decimal [not null]
  discount Decimal [not null, default: 0]
  notes String
  createdAt DateTime [default: `now()`, not null]
  debtItems DebtPaymentItem [not null]
}

Table DebtPaymentItem {
  id String [pk]
  paymentId String [not null]
  payment DebtPayment [not null]
  debtId String [not null]
  debt Debt [not null]

  indexes {
    (paymentId, debtId) [unique]
  }
}

Table Category {
  id String [pk]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Expense {
  id String [pk]
  description String [not null]
  amount Decimal [not null]
  category ExpenseCategory [not null, default: 'LAINNYA']
  notes String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum TransactionStatus {
  SUKSES
  RETUR
  HUTANG
}

Enum UserRole {
  OWNER
  WORKER
  UNKNOW
}

Enum Brand {
  HONDA
  YAMAHA
  KAWASAKI
  SUZUKI
}

Enum ExpenseCategory {
  RESTOK
  OPERASIONAL
  GAJI
  PIUTANG_MASUK
  LAINNYA
}

Ref: Product.productId - ProductStock.id [delete: Cascade]

Ref: OnSaleProduct.productId > Product.productId [delete: Cascade]

Ref: OnSaleProduct.transactionId > Transaction.id [delete: Cascade]

Ref: Debt.bengkelId > Bengkel.id [delete: Cascade]

Ref: Debt.transactionId - Transaction.id [delete: Cascade]

Ref: DebtPayment.bengkelId > Bengkel.id [delete: Cascade]

Ref: DebtPaymentItem.paymentId > DebtPayment.id [delete: Cascade]

Ref: DebtPaymentItem.debtId > Debt.id [delete: Cascade]